--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -3,15 +3,18 @@ var data = obj;
 var self = this;
 ?>
 <dt>
-    <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') + name + (kind !== 'event' ? data.signature : '') ?></h4>
+    <?js if (data.kind !== 'module') { ?>
+        <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') +
+        name + (data.signature || '') ?></h4>
 
-    <?js if (data.summary) { ?>
-    <p class="summary"><?js= summary ?></p>
+        <?js if (data.summary) { ?>
+        <p class="summary"><?js= summary ?></p>
+        <?js } ?>
     <?js } ?>
 </dt>
 <dd>
 
-    <?js if (data.description) { ?>
+    <?js if (data.kind !== 'module' && data.description) { ?>
     <div class="description">
         <?js= data.description ?>
     </div>
