--- a/templates/default/tmpl/properties.tmpl
+++ b/templates/default/tmpl/properties.tmpl
@@ -1,5 +1,6 @@
 <?js
-    var props = obj;
+    var data = obj;
+    var props = data.subprops || data.properties;
 
     /* sort subprops under their parent props (like opts.classname) */
     var parentProp = null;
@@ -32,7 +33,7 @@
             props.hasName = true;
         }
 
-        if (typeof prop.defaultvalue !== 'undefined') {
+        if (typeof prop.defaultvalue !== 'undefined' && !data.isEnum) {
             props.hasDefault = true;
         }
     });
