--- a/templates/fe/tmpl/container.tmpl
+++ b/templates/fe/tmpl/container.tmpl
@@ -80,6 +80,54 @@
         <?js }); ?></dl>
     <?js } ?>
 
+    <?js
+    /*
+    인터페이스를 구현한 클래스에서 인터페이스의 목록을 나열
+    listing interface list at implemented class documents.
+    */
+    var implements = doc.implements;
+    if (doc.kind === 'class' && implements && implements.length) {
+    ?>
+        <h3 class="subsection-title">Implements</h3>
+        <ul>
+            <?js
+                implements.forEach(function(imp) {
+            ?>
+                <li> <?js= self.linkto(imp) ?> </li>
+            <?js
+                });
+            ?>
+        </ul>
+
+    <?js
+    }
+    ?>
+
+    <?js
+    /*
+    인터페이스 설명 문서에서 이 인터페이스를 상속한 클래스 목록 나열
+    listing implemented class with this interface.
+    */
+    var implemented = self.find({ 'implements': { 'isArray': true } });
+    if (doc.kind === 'interface' && implemented && implemented.length) {
+    ?>
+        <h3 class="subsection-title">Implemented Classes</h3>
+        <ul>
+            <?js
+                implemented.forEach(function(imp) {
+                    if (imp.implements.indexOf(doc.name) > -1) {
+            ?>
+                <li> <?js= self.linkto(imp.longname, self.htmlsafe(imp.name)) ?> </li>
+            <?js
+                    }
+                });
+            ?>
+        </ul>
+
+    <?js
+    }
+    ?>
+
      <?js
         var mixins = self.find({kind: 'mixin', memberof: doc.longname});
         if (doc.kind !== 'globalobj' && mixins && mixins.length) {
