--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -40,8 +40,8 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
     <?js } ?>
 
     <?js if (data.implemented && data.implements) { ?>
-    <dt class="implemented-from">Implemented From:</dt>
-    <dd class="implemented-from"><ul class="dummy"><li>
+    <dt class="implementes">Implementes:</dt>
+    <dd class="implementes"><ul class="dummy"><li>
         <?js= this.linkto(data.implements, this.htmlsafe(data.implements)) ?>
     </li></dd>
     <?js } ?>
