Updated the template so it now display the @classdesc for classes defined within the modules.

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -30,9 +30,11 @@
         <?js } ?></h2>
         <?js if (doc.classdesc) { ?>
             <div class="class-description"><?js= doc.classdesc ?></div>
-        <?js } else if (doc.kind === 'module' && doc.module && doc.module.classdesc) { ?>
-            <div class="class-description"><?js= doc.module.classdesc ?></div>
         <?js } ?>
+    <?js } else if (doc.kind === 'module' && doc.modules) { ?>
+        <?js doc.modules.forEach(function(module) { ?>
+            <div class="class-description"><?js= module.classdesc ?></div>
+        <?js }) ?>
     <?js } ?>
 </header>
 
