--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -4,6 +4,10 @@ var self = this;
 ?>
 <dt>
     <?js if (data.kind !== 'module') { ?>
+        <?js if (kind === 'class') { ?>
+        <h2>Constructor</h2>
+        <?js } ?>
+        
         <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') +
         name + (data.signature || '') ?></h4>
 
