--- a/templates/default/static/styles/styles.css
+++ b/templates/default/static/styles/styles.css
@@ -164,6 +164,45 @@
 }
 
 /**********************
+* Filter Input
+***********************/
+#filter-input-wrapper {
+	padding-bottom:6px;
+	border-bottom:1px solid #ccc;
+	margin-bottom:20px;
+}
+
+#filter-input {
+	position: relative;
+	width:300px;
+	margin-bottom:10px;
+}
+
+#filter-input input {
+	width:271px;
+	height:28px;
+	font:inherit;
+	line-height:1;
+	padding-left:4px;
+}
+
+#filter-input input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
+#filter-input button {
+	position:absolute;
+	right:0;
+	top:3px;
+	width:22px;
+	height:22px;
+	border:none !important;
+	box-shadow:none !important;
+	background:url(images/circle-x.svg) no-repeat;
+	background-size:contain;
+}
+
+/**********************
 * Generate docs styling
 ***********************/
 * {
@@ -385,10 +424,10 @@ nav ul {
     margin: 0 0 0 2px;
     padding: 0;
     list-style-type: none;
+    overflow: hidden;
 }
 nav ul a {
     display: block;
-    word-wrap: break-word;
 }
 
 
