--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <title>JSDoc: <?js= title ?></title>
 
+    <!--[if lt IE 9]>
+        <script src="scripts/polyfills.js"> </script>
+    <![endif]-->
+
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
     <script src="scripts/functions.js"> </script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
     <link type="text/css" rel="stylesheet" href="styles/hosted-docs.css">
