Use a PNG instead of an SVG for the 'x' button so that it can be viewed in IE8.

--- a/templates/default/static/styles/styles.css
+++ b/templates/default/static/styles/styles.css
@@ -198,7 +198,7 @@
 	height:22px;
 	border:none !important;
 	box-shadow:none !important;
-	background:url(images/circle-x.svg) no-repeat;
+	background:url(images/circle-x.png) no-repeat;
 	background-size:contain;
 }
 
