Use a PNG instead of an SVG for the 'x' button so that it can be viewed in IE8. Conflicts: 	templates/default/static/styles/styles.css

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -377,7 +377,7 @@ h6
 	height:22px;
 	border:none !important;
 	box-shadow:none !important;
-	background:url(images/circle-x.svg) no-repeat;
+	background:url(images/circle-x.png) no-repeat;
 	background-size:contain;
 }
 
