--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -32,7 +32,7 @@
 	<div id="filter-input-wrapper">
         <div id="filter-input">
 		    <input type="text" list="package-prefixes" placeholder="package filter" oninput="packageFilter.updateDisplayedItems(this.value)"
-		     onkeyup="packageFilter.onKeyPress(this, event)">
+		     onkeyup="packageFilter.onKeyUp(this, event)">
 		    <button onclick="packageFilter.setFilter('')"></button>
 	    </div>
 	</div>
