Work around the bug that occurs in IE10 and below (pressing enter in a text box causes the first button in the same form to be clicked) by explicitly wrapping in a <form/> tag in case other buttons are added to the page (we do this in the BladeRunnerJS template), and ensuring that the other button in the same form is not considered to be a submit button.
Since explicitly wrapping in a <form/> causes Chrome to submit when you
press enter, I also added code to prevent this from occurring.

Conflicts:
	templates/default/tmpl/layout.tmpl

--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -31,9 +31,11 @@
 <nav>
 	<div id="filter-input-wrapper">
         <div id="filter-input">
-		    <input type="text" list="package-prefixes" placeholder="package filter" oninput="packageFilter.updateDisplayedItems(this.value)"
-		     onkeyup="packageFilter.onKeyUp(this, event)">
-		    <button onclick="packageFilter.setFilter('')"></button>
+        	<form onsubmit="return false;">
+		    	<input type="text" list="package-prefixes" placeholder="package filter" oninput="packageFilter.updateDisplayedItems(this.value)"
+		    	 onkeyup="packageFilter.onKeyUp(this, event)">
+		    	<button type="button" onclick="packageFilter.setFilter('')"></button>
+		    </form>
 	    </div>
 	</div>
 	<datalist id="package-prefixes"></datalist>
