--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -50,9 +50,11 @@
 <nav>
 	<div id="filter-input-wrapper">
         <div id="filter-input">
-		    <input type="text" list="package-prefixes" placeholder="package filter" oninput="packageFilter.updateDisplayedItems(this.value)"
-		     onkeyup="packageFilter.onKeyUp(this, event)" onkeypress="packageFilter.onKeyPress(this, event)">
-		    <button onclick="packageFilter.setFilter('')"></button>
+        	<form onsubmit="return false;">
+		    	<input type="text" list="package-prefixes" placeholder="package filter" oninput="packageFilter.updateDisplayedItems(this.value)"
+		    	 onkeyup="packageFilter.onKeyUp(this, event)">
+		    	<button type="button" onclick="packageFilter.setFilter('')"></button>
+		    </form>
 	    </div>
 	</div>
 	<datalist id="package-prefixes"></datalist>
