--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -371,8 +371,8 @@ h6
 
 #filter-input button {
 	position:absolute;
-	right:0;
-	top:3px;
+	right:-7px;
+	top:6px;
 	width:22px;
 	height:22px;
 	border:none !important;
