Final nudge to make the index filter styling continue work now it no longer has access to the BRJS stylesheets it was originally developed alongside.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -375,8 +375,8 @@ h6
 
 #filter-input button {
 	position:absolute;
-	right:0;
-	top:3px;
+	right:-7px;
+	top:6px;
 	width:22px;
 	height:22px;
 	border:none !important;
