--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -5,16 +5,19 @@
     <title>JSDoc: <?js= title ?></title>
 
     <!--[if lt IE 9]>
-        <script src="scripts/polyfills.js"> </script>
+        <script src="scripts/polyfills.js"></script>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 10]>
+        <link href="scripts/better-dom-legacy.htc" rel="htc"/>
+        <script src="scripts/better-dom-legacy.js"></script>
+        <script src="scripts/better-dom.js"></script>
+        <script src="scripts/better-placeholder-polyfill.js"></script>
     <![endif]-->
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
     <script src="scripts/index-filter.js"> </script>
-    
-    <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
