Switched from 'better-placeholder-polyfill' to 'Placeholder.js' because the 'Placeholder.js' has zero dependencies and works more reliably.

--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -9,10 +9,7 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 10]>
-        <link href="scripts/better-dom-legacy.htc" rel="htc"/>
-        <script src="scripts/better-dom-legacy.js"></script>
-        <script src="scripts/better-dom.js"></script>
-        <script src="scripts/better-placeholder-polyfill.js"></script>
+        <script src="scripts/placeholder.min.js"></script>
     <![endif]-->
 
     <script src="scripts/prettify/prettify.js"> </script>
