don't write empty class descriptions to template output (#741)

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -33,7 +33,9 @@
         <?js } ?>
     <?js } else if (doc.kind === 'module' && doc.modules) { ?>
         <?js doc.modules.forEach(function(module) { ?>
-            <div class="class-description"><?js= module.classdesc ?></div>
+            <?js if (module.classdesc) { ?>
+                <div class="class-description"><?js= module.classdesc ?></div>
+            <?js } ?>
         <?js }) ?>
     <?js } ?>
 </header>
