Attributes optional, nullable, repeatable generate invalid html in description for properties and params.
For example "&lt;optional>" should be "&lt;optional&gt;"

--- a/templates/default/tmpl/properties.tmpl
+++ b/templates/default/tmpl/properties.tmpl
@@ -81,11 +81,11 @@
             <?js if (props.hasAttributes) {?>
                 <td class="attributes">
                 <?js if (prop.optional) { ?>
-                    &lt;optional><br>
+                    &lt;optional&gt;<br>
                 <?js } ?>
 
                 <?js if (prop.nullable) { ?>
-                    &lt;nullable><br>
+                    &lt;nullable&gt;<br>
                 <?js } ?>
                 </td>
             <?js } ?>
