Use the same color for headings that MDN does.

--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -162,7 +162,7 @@ h4
     font-size: 18px;
     letter-spacing: -0.33px;
     margin-bottom: 12px;
-    color: #A35A00;
+    color: #4d4e53;
 }
 
 h5, .container-overview .subsection-title
