--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -2,26 +2,26 @@
     font-family: 'Open Sans';
     font-weight: normal;
     font-style: normal;
-    src: url('OpenSans-Regular-webfont.eot');
+    src: url('../fonts/OpenSans-Regular-webfont.eot');
     src:
         local('Open Sans'),
         local('OpenSans'),
-        url('OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-        url('OpenSans-Regular-webfont.woff') format('woff'),
-        url('OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+        url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
+        url('../fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
 }
 
 @font-face {
     font-family: 'Open Sans Light';
     font-weight: normal;
     font-style: normal;
-    src: url('OpenSans-Light-webfont.eot');
+    src: url('../fonts/OpenSans-Light-webfont.eot');
     src:
         local('Open Sans Light'),
         local('OpenSans Light'),
-        url('OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-        url('OpenSans-Light-webfont.woff') format('woff'),
-        url('OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+        url('../fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/OpenSans-Light-webfont.woff') format('woff'),
+        url('../fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
 }
 
 html
