--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -29,7 +29,7 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
 
     <?js if (data.since) {?>
     <dt class="tag-since">Since:</dt>
-    <dd class="tag-since"><ul class="dummy"><li><?js= since ?></dd>
+    <dd class="tag-since"><ul class="dummy"><li><?js= since ?></li></dd>
     <?js } ?>
 
     <?js if (data.inherited && data.inherits) { ?>
