render a doclet's `overrides` property (#792)

--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -39,6 +39,13 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
     </li></dd>
     <?js } ?>
 
+    <?js if (data.overrides) { ?>
+    <dt class="tag-overrides">Overrides:</dt>
+    <dd class="tag-overrides"><ul class="dummy"><li>
+        <?js= this.linkto(data.overrides, this.htmlsafe(data.overrides)) ?>
+    </li></dd>
+    <?js } ?>
+
     <?js if (data.implementations && data.implementations.length) { ?>
     <dt class="implementations">Implementations:</dt>
     <dd class="implementations"><ul>
