--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -7,7 +7,7 @@ var self = this;
         <?js if (kind === 'class') { ?>
         <h2>Constructor</h2>
         <?js } ?>
-        
+
         <h4 class="name" id="<?js= id ?>"><?js= data.attribs + (kind === 'class' ? 'new ' : '') +
         name + (data.signature || '') ?></h4>
 
@@ -50,7 +50,7 @@ var self = this;
 
     <?js= this.partial('details.tmpl', data) ?>
 
-    <?js if (data.requires && data.requires.length) { ?>
+    <?js if (data.kind !== 'module' && data.requires && data.requires.length) { ?>
     <h5>Requires:</h5>
     <ul><?js data.requires.forEach(function(r) { ?>
         <li><?js= self.linkto(r) ?></li>
