remove dictionary-list wrappers (#843)
Fixes validation errors. Also results in fewer sections being indented, which, to my eye, looks nicer and is easier to read.

--- a/templates/default/tmpl/details.tmpl
+++ b/templates/default/tmpl/details.tmpl
@@ -16,7 +16,7 @@ if (data.defaultvalue && (data.defaultvaluetype === 'object' || data.defaultvalu
 
     <h5 class="subsection-title">Properties:</h5>
 
-    <dl><?js= this.partial('properties.tmpl', data) ?></dl>
+    <?js= this.partial('properties.tmpl', data) ?>
 
 <?js } ?>
 
