--- a/templates/default/static/styles/jsdoc-default.css
+++ b/templates/default/static/styles/jsdoc-default.css
@@ -178,7 +178,7 @@ h5, .container-overview .subsection-title
     font-size: 120%;
     font-weight: bold;
     letter-spacing: -0.01em;
-    margin: 8px 0 3px -16px;
+    margin: 8px 0 3px 0;
 }
 
 h6
