--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -47,11 +47,11 @@
             <div class="description"><?js= doc.description ?></div>
         <?js } ?>
 
-        <dl><?js doc.modules.forEach(function(module) { ?>
+        <?js doc.modules.forEach(function(module) { ?>
             <?js= self.partial('method.tmpl', module) ?>
-        <?js }) ?></dl>
+        <?js }) ?>
     <?js } else if (doc.kind === 'class') { ?>
-        <dl><?js= self.partial('method.tmpl', doc) ?></dl>
+        <?js= self.partial('method.tmpl', doc) ?>
     <?js } else { ?>
         <?js if (doc.description) { ?>
             <div class="description"><?js= doc.description ?></div>
@@ -129,9 +129,9 @@
     ?>
         <h3 class="subsection-title">Members</h3>
 
-        <dl><?js members.forEach(function(p) { ?>
+        <?js members.forEach(function(p) { ?>
             <?js= self.partial('members.tmpl', p) ?>
-        <?js }); ?></dl>
+        <?js }); ?>
     <?js } ?>
 
     <?js
@@ -140,9 +140,9 @@
     ?>
         <h3 class="subsection-title">Methods</h3>
 
-        <dl><?js methods.forEach(function(m) { ?>
+        <?js methods.forEach(function(m) { ?>
             <?js= self.partial('method.tmpl', m) ?>
-        <?js }); ?></dl>
+        <?js }); ?>
     <?js } ?>
 
     <?js
@@ -151,7 +151,7 @@
     ?>
         <h3 class="subsection-title">Type Definitions</h3>
 
-        <dl><?js typedefs.forEach(function(e) {
+        <?js typedefs.forEach(function(e) {
                 if (e.signature) {
             ?>
                 <?js= self.partial('method.tmpl', e) ?>
@@ -162,7 +162,7 @@
                 <?js= self.partial('members.tmpl', e) ?>
             <?js
                 }
-            }); ?></dl>
+            }); ?>
     <?js } ?>
 
     <?js
@@ -171,9 +171,9 @@
     ?>
         <h3 class="subsection-title">Events</h3>
 
-        <dl><?js events.forEach(function(e) { ?>
+        <?js events.forEach(function(e) { ?>
             <?js= self.partial('method.tmpl', e) ?>
-        <?js }); ?></dl>
+        <?js }); ?>
     <?js } ?>
 </article>
 
