use a nested table for every param with properties, not just the first one (#901)

--- a/templates/default/tmpl/params.tmpl
+++ b/templates/default/tmpl/params.tmpl
@@ -19,6 +19,9 @@
                 parentParam.subparams.push(param);
                 params[i] = null;
             }
+            else {
+                parentParam = param;
+            }
         }
         else {
             parentParam = param;
