--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -60,8 +60,18 @@
         <?js= self.partial('details.tmpl', doc) ?>
 
         <?js if (doc.states && doc.states.length) { ?>
-            <h3>State Definition<?js= doc.states.length > 1? 's':'' ?></h3>
-            <?js= self.partial('states.tmpl', doc.states) ?>
+            <div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">State Definition<?js= doc.states.length > 1? 's':'' ?></h3>
+                    </div>
+                    <div class="panel-body">
+                        <div>
+                            <?js= self.partial('states.tmpl', doc.states) ?>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <?js } ?>
         
         <?js if (doc.stgate && doc.examples.length) { ?>
@@ -132,11 +142,20 @@
         }
         if (members && members.length && members.forEach) {
     ?>
-        <h3 class="subsection-title">Members</h3>
-
-        <?js members.forEach(function(p) { ?>
-            <?js= self.partial('members.tmpl', p) ?>
-        <?js }); ?>
+        <div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Members</h3>
+                </div>
+                <div class="panel-body">
+                    <div>
+                        <?js members.forEach(function(p) { ?>
+                            <?js= self.partial('members.tmpl', p) ?>
+                        <?js }); ?>
+                    </div>
+                </div>
+            </div>
+        </div>
     <?js } ?>
 
     <?js
