--- a/templates/default/tmpl/layout.tmpl
+++ b/templates/default/tmpl/layout.tmpl
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: <?js= title ?></title>
+    <title><?js= title ?></title>
 
     <script src="scripts/prettify/prettify.js"> </script>
-    <script src="scripts/prettify/lang-css.js"> </script>
+    <script src="scripts/prettify/lang-css.js"> </script>    
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
     <link type="text/css" rel="stylesheet" href="styles/prettify-tomorrow.css">
     <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
+    <link type="text/css" rel="stylesheet" href="styles/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="styles/bootstrap-theme.css">
 </head>
 
 <body>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+    <?js= this.nav ?>
+</nav>
 
 <div id="main">
 
@@ -21,10 +28,6 @@
 
     <?js= content ?>
 </div>
-
-<nav>
-    <?js= this.nav ?>
-</nav>
 
 <br class="clear">
 
@@ -34,5 +37,7 @@
 
 <script> prettyPrint(); </script>
 <script src="scripts/linenumber.js"> </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="scripts/bootstrap.js"> </script>
 </body>
 </html>
